--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-08-phonebook",
+  "name": "goit-react-hw-08-phonebook1",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://hennadiimariiev.github.io/goit-react-hw-08-phonebook",
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.1",
