--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.4",
     "gh-pages": "^3.2.3",
     "json-server": "^0.16.3",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -25,6 +26,7 @@
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
+    "sass": "^1.42.1",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
