--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "json-server": "^0.16.3",
     "node-sass": "^6.0.1",
     "notistack": "^2.0.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
