--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "gh-pages": "^3.2.3",
     "json-server": "^0.16.3",
+    "netlify-cli": "^6.10.4",
     "node-sass": "^6.0.1",
-    "notistack": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
